# pysimd

./: README.md  pyproject.toml  simd.py  test_simd.py
.github/workflows/: tests.yaml
