[project]
name = "pysimd"
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/denballakh/pysimd"

[mypy]
python_version = 3.12
strict = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.black]
line-length = 100
target-version = ['py312']
skip_string_normalization = true

